--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/Uzair-Niaz-Siddiqui" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-    <a class="footer-link" href="https://twitter.com/Niyazuzair" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-    <a class="footer-link" href="https://www.instagram.com/uzair.niyaz" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    <a class="footer-link" href="https://github.com/uzairniaz" target="_blank"><i class="fa-brands fa-github"></i></a>
+    <a class="footer-link" href="https://www.linkedin.com/Uzair-Niaz-Siddiqui" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+    <a class="footer-link" href="https://twitter.com/Niyazuzair" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
+    <a class="footer-link" href="https://www.instagram.com/uzair.niyaz" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+    <a class="footer-link" href="https://github.com/uzairniaz" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
     <p>© Uzair Niaz Siddiqui</p>
   </div>
 </body>
