--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2>Get In Touch</h2>
       <h3>I absolutely love meeting new people!.</h3>
       <p>Feel free to contact me via email or through social media links given below! Until next time!!</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+
     </div>
   </div>
 
@@ -66,6 +66,7 @@
     <a class="footer-link" href="https://twitter.com/Niyazuzair" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
     <a class="footer-link" href="https://www.instagram.com/uzair.niyaz" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
     <a class="footer-link" href="https://github.com/uzairniaz" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+    <a class="footer-link" href="mailto:uzairzmr@gmail.com" target="_blank"><i class="fa-brands fa-solid fa-envelope fa-2x"></i></a>
     <p>© Uzair Niaz Siddiqui</p>
   </div>
 </body>
