Img responsive/style changes in heading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>I'm Uzair</h1>
     <h2 class="subtext">a web developer :)</h2>
     <img class="cloud2" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class= "img-fluid" src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -39,7 +39,7 @@
     </div>
     <hr class="hr1">
     <div class="skills">
-      <h2>My Skills</h2>
+      <h2 class="heading ">My Skills</h2>
       <div class="skill-row">
         <img class="skillimg1" src="images/web-development.png" alt="">
         <h3>Web Development</h3>
@@ -53,7 +53,7 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
+      <h2 class="heading">Get In Touch</h2>
       <h3>I absolutely love meeting new people!.</h3>
       <p>Feel free to contact me via email or through social media links given below! Until next time!!</p>
 
