--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/Uzair-Niaz-Siddiqui" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/uzair-niaz-siddiqui-b67a4121b" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
     <a class="footer-link" href="https://twitter.com/Niyazuzair" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
     <a class="footer-link" href="https://www.instagram.com/uzair.niyaz" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
     <a class="footer-link" href="https://github.com/uzairniaz" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
