--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <a class="footer-link" href="https://www.instagram.com/uzair.niyaz" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
     <a class="footer-link" href="https://github.com/uzairniaz" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
     <a class="footer-link" href="mailto:uzairzmr@gmail.com" target="_blank"><i class="fa-brands fa-solid fa-envelope fa-2x"></i></a>
-    <p>© Uzair Niaz Siddiqui</p>
+    <p class="footer">© Copyright 2022 Uzair Niaz Siddiqui</p>
   </div>
 </body>
 
