--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Uzair Niaz</title>
+  <title>Uzair Niaz Siddiqui | Personal Site</title>
 
   <!-- Added Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -26,8 +26,8 @@
 <body>
   <div class="topcontainer">
     <img class="cloud1" src="images/cloud.png" alt="cloud-img" />
-    <h1>I'm Uzair</h1>
-    <h2 class="subtext">a web developer :)</h2>
+    <h1>Hi. I'm Uzair</h1>
+    <h2 class="subtext">an awesome person...! ;)</h2>
     <img class="cloud2" src="images/cloud.png" alt="cloud-img">
     <img class= "img-fluid" src="images/mountain.png" alt="mountain-img">
   </div>
